--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<body class="w3-content" style="max-width:1300px">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>ecetabag.com</title>
+     <link rel="icon" href="img/ecelogo.png">
+        <meta name="google-site-verification" content="K2BPURoct3J9_i2TutO8GctzAZJIxxUfmCo_uUwIESE" />
+        <meta name="keywords" content="ecetabag, Ece Tabag, ecetabağ, Ece Tabağ">
+        <meta name="description" content="Hi! Click this link if you want to learn more about me...">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="css/fontAwesome.css">
+        <link rel="stylesheet" href="css/hero-slider.css">
+        <link rel="stylesheet" href="css/owl-carousel.css">
+        <link rel="stylesheet" href="css/datepicker.css">
+        <link rel="stylesheet" href="css/templatemo-style.css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet'>
+        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    </head>
 
 <!-- First Grid: Logo & About -->
 <div class="w3-row">
