--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       <h1 style="font-family: 'Questrial';">My Logo</h1>
     </div>
     <div class="w3-padding-64">
-      <a href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Home</a>
-      <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">My Work</a>
-      <a href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Resume</a>
-      <a href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
+      <a style="font-family: 'Questrial';" href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Home</a>
+      <a style="font-family: 'Questrial';" href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">My Work</a>
+      <a style="font-family: 'Questrial';" href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Resume</a>
+      <a style="font-family: 'Questrial';" href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
     </div>
   </div>
   <div class="w3-half w3-blue-grey w3-container" style="height:700px">
@@ -51,6 +51,7 @@
 </div>
 
 <!-- Second Grid: Work & Resume -->
+        <!--
 <div class="w3-row">
   <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
     <div class="w3-padding-64">
@@ -132,7 +133,7 @@
 </div>
 
 <!-- Third Grid: Swing By & Contact -->
-<div class="w3-row" id="contact">
+<!--<div class="w3-row" id="contact">
   <div class="w3-half w3-dark-grey w3-container w3-center" style="height:700px">
     <div class="w3-padding-64">
       <h1>Swing By</h1>
@@ -168,9 +169,9 @@
 </div>
 
 <!-- Footer -->
-<footer class="w3-container w3-black w3-padding-16">
+<!--<footer class="w3-container w3-black w3-padding-16">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-</footer>
+</footer> -->
 
 </body>
 </html>
