--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <!-- First Grid: Logo & About -->
 <div class="w3-row">
-  <div class="w3-half w3-black w3-container w3-center" style="height:700px">
+  <div class="w3-fill w3-black w3-container w3-center" style="height:700px">
     <div class="w3-padding-64">
       <h1 style="font-family: 'Questrial';">My Logo</h1>
     </div>
@@ -38,7 +38,7 @@
       <a style="font-family: 'Questrial';" href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
     </div>
   </div>
-  <div class="w3-half w3-blue-grey w3-container" style="height:700px">
+<!--  <div class="w3-half w3-blue-grey w3-container" style="height:700px">
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
       <img src="/w3images/avatar3.png" class="w3-margin w3-circle" alt="Person" style="width:50%">
@@ -47,7 +47,7 @@
         <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 
 <!-- Second Grid: Work & Resume -->
