--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <link rel="stylesheet" href="css/hero-slider.css">
         <link rel="stylesheet" href="css/owl-carousel.css">
         <link rel="stylesheet" href="css/datepicker.css">
+                <link rel="stylesheet" href="css/templatemo-style.css">
+
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body class="w3-content" style="max-width:1300px">
 
@@ -23,7 +25,23 @@
 <link href='https://fonts.googleapis.com/css?family=Questrial' rel='stylesheet'>
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
+<style>
+    a:link {
+  text-decoration: none;
+}
 
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
+}
+        </style>
 <!-- First Grid: Logo & About -->
 <div class="w3-row">
   <div class="w3-fill w3-black w3-container w3-center" style="height:700px">
