--- a/index.html
+++ b/index.html
@@ -46,12 +46,17 @@ a:active {
 <div class="w3-row">
   <div class="w3-fill w3-black w3-container w3-center" style="height:700px">
     <div class="w3-padding-64">
-      <h1 style="font-family: 'Questrial';">My Logo</h1>
+      <h1 style="font-family: 'Questrial';">Ece Tabağ</h1>
     </div>
     <div class="w3-padding-64">
-      <a style="font-family: 'Questrial';" href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Home</a>
-      <a style="font-family: 'Questrial';" href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">My Work</a>
+      <a style="font-family: 'Questrial';" href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-8">Home</a>
+      <a style="font-family: 'Questrial';" href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Projects</a>
+              <a style="font-family: 'Questrial';" href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Publications</a>
+
       <a style="font-family: 'Questrial';" href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Resume</a>
+              <a style="font-family: 'Questrial';" href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">News</a>
+              <a style="font-family: 'Questrial';" href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Gallery</a>
+
       <a style="font-family: 'Questrial';" href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
     </div>
   </div>
