--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@ a:active {
     <div class="w3-padding-64">
       <h1 style="font-family: 'Questrial';">Ece Tabağ</h1>
     </div>
-    <div class="w3-padding-64">
+    <div class="w3-padding-50">
+        <div class="block" data-fx="9">
+					<a class="block__title" data-img="img/41.jpg">Effect 9</a>
+					<a class="block__link" data-img="img/42.jpg">Quechan</a>
+					<a class="block__link" data-img="img/1.jpg">Chemehuevi</a>
+					<a class="block__link" data-img="img/2.jpg">Meskwaki</a>
+					<a class="block__link" data-img="img/3.jpg">Ponca</a>
+				</div>
       <a style="font-family: 'Questrial';" href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-8">Home</a>
       <a style="font-family: 'Questrial';" href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Projects</a>
               <a style="font-family: 'Questrial';" href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Publications</a>
