--- a/index.html
+++ b/index.html
@@ -48,159 +48,13 @@ a:active {
     <div class="w3-padding-64">
       <h1 style="font-family: 'Questrial';">Ece Tabağ</h1>
     </div>
-    <div class="w3-padding-50">
-        <div class="block" data-fx="9">
-					<a class="block__title" data-img="img/41.jpg">Effect 9</a>
-					<a class="block__link" data-img="img/42.jpg">Quechan</a>
-					<a class="block__link" data-img="img/1.jpg">Chemehuevi</a>
-					<a class="block__link" data-img="img/2.jpg">Meskwaki</a>
-					<a class="block__link" data-img="img/3.jpg">Ponca</a>
+   <div class="content__text">
+					All you have to learn here is how to have <a class="content__text-link" data-img="img/42.jpg" data-fx="1">fun</a>. It's almost like something out of a <a class="content__text-link" data-img="img/40.jpg" data-fx="2">fairytale</a> book. Almost everything is going to happen for you automatically - you don't have to spend any time <a class="content__text-link" data-img="img/38.jpg" data-fx="3">working</a> or worrying. Take your <a class="content__text-link" data-img="img/36.jpg" data-fx="4">time</a>. Speed will come later. A thin paint will stick to a <a class="content__text-link" data-img="img/34.jpg" data-fx="5">thick</a> paint. There comes a nice little <a class="content__text-link" data-img="img/32.jpg" data-fx="6">fluffer</a>.
+
+					You can create the <a class="content__text-link" data-img="img/30.jpg" data-fx="7">world</a> you want to see and be a part of. You have that <a class="content__text-link" data-img="img/28.jpg" data-fx="8">power</a>. Don't forget to tell these special <a class="content__text-link" data-img="img/26.jpg" data-fx="9">people</a> in your life just how special they are to <a class="content__text-link" data-img="img/24.jpg" data-fx="10">you</a>. Let's build an almighty <a class="content__text-link"  data-img="img/22.jpg" data-fx="11">mountain</a>. Isn't that fantastic that you can create an almighty <a class="content__text-link"  data-img="img/5.jpg" data-fx="12">tree</a> that fast? The only <a class="content__text-link" data-img="img/20.jpg" data-fx="13">prerequisite</a> is that it makes you happy. If it makes you happy then it's good.
+
+					This is your <a class="content__text-link" data-img="img/18.jpg,img/16.jpg,img/14.jpg" data-fx="14">creation</a> - and it's just as unique and <a class="content__text-link" data-img="img/12.jpg" data-fx="15">special</a> as you are. Decide where your <a class="content__text-link" data-img="img/3.jpg" data-fx="16">cloud</a> lives. Maybe he lives right in <a class="content__text-link" data-img="img/2.jpg" data-fx="17">here</a>. You have to make those little <a class="content__text-link" data-img="img/1.jpg" data-fx="18">noises</a> or it won't <a class="content__text-link" data-img="img/41.jpg" data-fx="19">work</a>. Just go <a class="content__text-link" data-img="img/33.jpg" data-fx="20">out</a> and talk to a tree. Make <a class="content__text-link" data-img="img/39.jpg" data-fx="21">friends</a> with it. This is <a class="content__text-link" data-img="img/37.jpg" data-fx="22">truly</a> an almighty <a class="content__text-link" data-img="img/35.jpg" data-fx="23">mountain</a>.
 				</div>
-      <a style="font-family: 'Questrial';" href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-8">Home</a>
-      <a style="font-family: 'Questrial';" href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Projects</a>
-              <a style="font-family: 'Questrial';" href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Publications</a>
-
-      <a style="font-family: 'Questrial';" href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Resume</a>
-              <a style="font-family: 'Questrial';" href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">News</a>
-              <a style="font-family: 'Questrial';" href="#work" class="w3-button w3-black w3-block w3-hover-dark-grey w3-padding-16">Gallery</a>
-
-      <a style="font-family: 'Questrial';" href="#contact" class="w3-button w3-black w3-block w3-hover-brown w3-padding-16">Contact</a>
-    </div>
-  </div>
-<!--  <div class="w3-half w3-blue-grey w3-container" style="height:700px">
-    <div class="w3-padding-64 w3-center">
-      <h1>About Me</h1>
-      <img src="/w3images/avatar3.png" class="w3-margin w3-circle" alt="Person" style="width:50%">
-      <div class="w3-left-align w3-padding-large">
-        <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-        <p>Lorem ipusm sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-      </div>
-    </div>
-  </div> -->
-</div>
-
-<!-- Second Grid: Work & Resume -->
-        <!--
-<div class="w3-row">
-  <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
-    <div class="w3-padding-64">
-      <h2>My Work</h2>
-      <p>Some of my latest projects.</p>
-    </div>
-    <div class="w3-row">
-      <div class="w3-half">
-        <img src="/w3images/coffee.jpg" style="width:100%">
-      </div>
-      <div class="w3-half">
-        <img src="/w3images/workbench.jpg" style="width:100%">
-      </div>
-    </div>
-    <div class="w3-row w3-hide-small">
-      <div class="w3-half">
-        <img src="/w3images/workbench.jpg" style="width:100%">
-      </div>
-      <div class="w3-half">
-        <img src="/w3images/coffee.jpg" style="width:100%">
-      </div>
-    </div>
-
-    <div class="w3-row w3-hide-small">
-      <div class="w3-half">
-        <img src="/w3images/sound.jpg" style="width:100%">
-      </div>
-      <div class="w3-half">
-        <img src="/w3images/workbench.jpg" style="width:100%">
-      </div>
-    </div><br>
-    <p>Just call me awesome.</p>
-  </div>
-  <div class="w3-half w3-indigo w3-container" style="min-height:800px">
-    <div class="w3-padding-64 w3-center">
-      <h2>Resume</h2>
-      <p>A draft from my CV</p>
-      <div class="w3-container w3-responsive">
-        <table class="w3-table">
-          <tr>
-            <th>Year</th>
-            <th>Title</th>
-            <th>Where</th>
-          </tr>
-          <tr class="w3-white">
-            <td>2012-2016</td>
-            <td>The rest is history..</td>
-            <td>Lorem ipsum</td>
-          </tr>
-          <tr>
-            <td>2009-2012</td>
-            <td>Started my own company</td>
-            <td>My Garage</td>
-          </tr>
-          <tr class="w3-white">
-            <td>2008-2009</td>
-            <td>Started working for Lorem</td>
-            <td>London, UK</td>
-          </tr>
-          <tr>
-            <td>2005-2008</td>
-            <td>Degree in Bachelor of Design</td>
-            <td>Harvard, USA</td>
-          </tr>
-          <tr class="w3-white">
-            <td>2002-2005</td>
-            <td>Degree in Bachelor of Business</td>
-            <td>RMIT University, Melbourne, Australia</td>
-          </tr>
-          <tr class="w3-hide-medium">
-            <td>2002-2005</td>
-            <td>Degree in Bachelor of Business</td>
-            <td>RMIT University, Melbourne, Australia</td>
-          </tr>
-        </table>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Third Grid: Swing By & Contact -->
-<!--<div class="w3-row" id="contact">
-  <div class="w3-half w3-dark-grey w3-container w3-center" style="height:700px">
-    <div class="w3-padding-64">
-      <h1>Swing By</h1>
-    </div>
-    <div class="w3-padding-64">
-      <p>..for a cup of coffee, or whatever.</p>
-      <p>Chicago, US</p>
-      <p>+00 1515151515</p>
-      <p>test@test.com</p>
-    </div>
-  </div>
-  <div class="w3-half w3-teal w3-container" style="height:700px">
-    <div class="w3-padding-64 w3-padding-large">
-      <h1>Contact</h1>
-      <p class="w3-opacity">GET IN TOUCH</p>
-      <form class="w3-container w3-card w3-padding-32 w3-white" action="/action_page.php" target="_blank">
-        <div class="w3-section">
-          <label>Name</label>
-          <input class="w3-input" style="width:100%;" type="text" required name="Name">
-        </div>
-        <div class="w3-section">
-          <label>Email</label>
-          <input class="w3-input" style="width:100%;" type="text" required name="Email">
-        </div>
-        <div class="w3-section">
-          <label>Message</label>
-          <input class="w3-input" style="width:100%;" type="text" required name="Message">
-        </div>
-        <button type="submit" class="w3-button w3-teal w3-right">Send</button>
-      </form>
-    </div>
-  </div>
-</div>
-
-<!-- Footer -->
-<!--<footer class="w3-container w3-black w3-padding-16">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-</footer> -->
 
 </body>
 </html>
